--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>All Luminum Br</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <style>
     body {
       margin: 0;
@@ -13,51 +14,109 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      min-height: 100vh;
       text-align: center;
     }
+
     .container {
-      max-width: 600px;
+      max-width: 720px;
+      padding: 40px 20px;
     }
+
     h1 {
-      font-size: 2.5rem;
-      margin-bottom: 16px;
+      font-size: 2.6rem;
+      margin-bottom: 12px;
+      letter-spacing: 1px;
     }
+
+    h2 {
+      font-size: 1.2rem;
+      font-weight: normal;
+      opacity: 0.9;
+      margin-bottom: 28px;
+    }
+
     p {
+      font-size: 1.05rem;
+      line-height: 1.6;
+      opacity: 0.9;
+      margin-bottom: 18px;
+    }
+
+    .section-title {
+      margin-top: 28px;
+      font-weight: bold;
       font-size: 1.1rem;
+      opacity: 1;
+    }
+
+    .socials {
+      margin-top: 16px;
+      font-size: 1rem;
+    }
+
+    .socials span {
+      display: inline-block;
+      margin: 6px 10px;
+      opacity: 0.9;
+    }
+
+    .footer {
+      margin-top: 32px;
+      font-size: 0.95rem;
       opacity: 0.85;
     }
   </style>
 </head>
+
 <body>
   <div class="container">
-  <h1>All Luminum Br</h1>
 
-  <p><strong>Soluções em alumínio para aplicações industriais e construtivas</strong></p>
+    <h1>All Luminum Br</h1>
+    <h2>Soluções em alumínio para aplicações industriais e construtivas</h2>
 
-  <p>
-    A All Luminum Br atua no fornecimento e desenvolvimento de soluções em alumínio,
-    atendendo demandas industriais, técnicas e estruturais com foco em qualidade,
-    precisão e confiabilidade.
-  </p>
+    <p>
+      A All Luminum Br atua no desenvolvimento e fornecimento de soluções em alumínio,
+      atendendo demandas industriais, técnicas e estruturais com foco em qualidade,
+      precisão e confiabilidade.
+    </p>
 
-  <p>
-    Nossa operação é orientada por processos, padrões técnicos e visão de longo prazo,
-    acompanhando as necessidades do mercado e a evolução do setor.
-  </p>
+    <p>
+      Nossa operação é orientada por processos, padrões técnicos e visão de longo prazo,
+      acompanhando a evolução do mercado e as necessidades de cada projeto.
+    </p>
 
-  <p><strong>Atuação</strong><br>
-    Perfis e soluções em alumínio<br>
-    Aplicações industriais e técnicas<br>
-    Projetos sob demanda
-  </p>
+    <p class="section-title">Atuação</p>
+    <p>
+      • Perfis e soluções em alumínio<br>
+      • Aplicações industriais e técnicas<br>
+      • Projetos sob demanda
+    </p>
 
-  <p><strong>Status</strong><br>
-    Empresa ativa, em fase de estruturação e expansão operacional.
-  </p>
+    <p class="section-title">Status</p>
+    <p>
+      Empresa ativa, em fase de estruturação e expansão operacional.
+    </p>
 
-  <p><strong>Contato</strong><br>
-    contato@allluminumbr.com<br>
-    Brasil
-  </p>
-</div>
+    <p class="section-title">Contato</p>
+    <p>
+      📞 (16) 99785-7531<br>
+      ✉️ vendas@allluminumbr.br<br>
+      📍 São Carlos – SP – Brasil
+    </p>
+
+    <p class="section-title">Redes sociais</p>
+    <div class="socials">
+      <span>📸 Instagram — @allluminumbr</span>
+      <span>📘 Facebook — @allluminumbr</span>
+      <span>💼 LinkedIn — All Luminum Br</span>
+      <span>▶️ YouTube — All Luminum Br</span>
+    </div>
+
+    <div class="footer">
+      © 2026 All Luminum Br — Todos os direitos reservados.
+    </div>
+
+  </div>
+</body>
+</html>
