--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <p class="section-title">Contato</p>
       <div class="contact">
         📞 (16) 99785-7531<br>
-        ✉️ vendas@allluminumbr.br<br>
+        ✉️ vendas@allluminumbr.com
         📍 São Carlos – SP – Brasil
       </div>
 
