--- a/atuacao.html
+++ b/atuacao.html
@@ -103,4 +103,38 @@
   </footer>
 
 </body>
+  <header class="header">
+  <div class="container-header">
+
+    <!-- LOGO -->
+    <div class="logo">
+      <a href="index.html">ALL LUMINUM</a>
+    </div>
+
+    <!-- MENU -->
+    <nav class="nav">
+      <ul>
+        <li><a href="empresa.html">Empresa</a></li>
+        <li><a href="atuacao.html">Atuação</a></li>
+        <li><a href="servicos.html">Soluções</a></li>
+        <li><a href="contato.html" class="btn-contato">Contato</a></li>
+      </ul>
+    </nav>
+
+    <!-- SOCIAL -->
+    <div class="social-header">
+      <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+      <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+      <a href="#" aria-label="Linkedin"><i class="fab fa-linkedin"></i></a>
+      <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+    </div>
+
+    <!-- MOBILE MENU -->
+    <div class="menu-toggle">
+      <i class="fas fa-bars"></i>
+    </div>
+
+  </div>
+</header>
+
 </html>
