--- a/index.html
+++ b/index.html
@@ -1,209 +1,115 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <title>All Luminum Br</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <title>All Luminum Br | Alumínio Industrial</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
-      font-family: "Segoe UI", Arial, Helvetica, sans-serif;
-      color: #ffffff;
-      background-image: url("https://images.unsplash.com/photo-1603201667141-5323cf4a76d7");
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      min-height: 100vh;
-    }
-
-    .overlay {
-      background: rgba(0, 0, 0, 0.78);
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
+      font-family: Arial, Helvetica, sans-serif;
+      color: #fff;
+      background: #000;
     }
 
     /* HEADER */
     header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      height: 80px;
+      background: rgba(0,0,0,0.85);
+      backdrop-filter: blur(6px);
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 24px 40px;
+      padding: 0 40px;
+      z-index: 1000;
     }
 
     header img {
-      height: 50px;
+      height: 40px;
     }
 
     nav a {
-      color: #ffffff;
-      text-decoration: none;
+      color: #fff;
       margin-left: 24px;
-      font-size: 0.95rem;
-      opacity: 0.9;
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 15px;
     }
 
     nav a:hover {
-      opacity: 1;
+      opacity: 0.7;
     }
 
-    /* CONTEÚDO */
-    .container {
-      max-width: 900px;
-      margin: auto;
+    /* HERO */
+    .hero {
+      height: 100vh;
+      background: url("https://images.unsplash.com/photo-1581090700227-1e37b190418e") center/cover no-repeat;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-align: center;
-      padding: 40px 20px;
+      padding: 120px 20px 40px;
+    }
+
+    .hero-content {
+      background: rgba(0,0,0,0.65);
+      padding: 50px;
+      max-width: 720px;
     }
 
     h1 {
-      font-size: 3rem;
-      letter-spacing: 2px;
-      text-transform: uppercase;
-      margin-bottom: 12px;
-    }
-
-    h2 {
-      font-size: 1.3rem;
-      font-weight: normal;
-      margin-bottom: 30px;
-      opacity: 0.9;
-    }
-
-    .divider {
-      width: 90px;
-      height: 3px;
-      background: #cfcfcf;
-      margin: 30px auto;
-      opacity: 0.6;
+      font-size: 42px;
+      margin-bottom: 20px;
     }
 
     p {
-      font-size: 1.05rem;
-      line-height: 1.7;
-      margin-bottom: 18px;
+      font-size: 18px;
+      line-height: 1.6;
       opacity: 0.9;
     }
 
-    .section-title {
-      margin-top: 30px;
-      font-size: 1.1rem;
-      font-weight: bold;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-    }
-
-    .contact {
-      margin-top: 16px;
-      line-height: 1.8;
-    }
-
-    .socials {
-      margin-top: 20px;
-      font-size: 0.95rem;
-    }
-
-    .socials span {
-      display: inline-block;
-      margin: 6px 14px;
-      opacity: 0.9;
-    }
-
+    /* FOOTER */
     footer {
+      background: #0f0f0f;
+      padding: 40px 20px;
       text-align: center;
-      padding: 20px;
-      font-size: 0.85rem;
-      opacity: 0.6;
+      font-size: 14px;
     }
 
-    @media (max-width: 700px) {
-      header {
-        flex-direction: column;
-        gap: 16px;
-      }
+    footer a {
+      color: #fff;
+      margin: 0 10px;
+      text-decoration: none;
+    }
 
+    @media (max-width: 768px) {
       nav {
-        text-align: center;
+        display: none;
       }
 
       h1 {
-        font-size: 2.2rem;
+        font-size: 30px;
       }
     }
   </style>
 </head>
 
 <body>
-  <div class="overlay">
 
-    <!-- HEADER -->
-    <header>
-      <!-- 🔴 COLE AQUI O LINK DA LOGO -->
-      <img src="COLE_AQUI_O_LINK_DA_LOGO.png" alt="All Luminum Br" />
+<header>
+  <img src="https://via.placeholder.com/180x40?text=ALL+LUMINUM+BR" alt="All Luminum Br">
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="empresa.html">Empresa</a>
+    <a href="atuacao.html">Atuação</a>
+    <a href="#contato">Contato</a>
+  </nav>
+</header>
 
-      <nav>
-        <a href="#">Início</a>
-        <a href="#">Empresa</a>
-        <a href="#">Atuação</a>
-        <a href="#">Contato</a>
-      </nav>
-    </header>
-
-    <!-- CONTEÚDO -->
-    <main class="container">
-      <h1>All Luminum Br</h1>
-      <h2>Soluções em alumínio para aplicações industriais e construtivas</h2>
-
-      <div class="divider"></div>
-
-      <p>
-        A All Luminum Br atua no desenvolvimento e fornecimento de soluções em alumínio,
-        atendendo demandas industriais, técnicas e estruturais com foco em qualidade,
-        precisão e confiabilidade.
-      </p>
-
-      <p>
-        Nossa operação é orientada por processos, padrões técnicos e visão de longo prazo,
-        acompanhando a evolução do mercado e as necessidades de cada projeto.
-      </p>
-
-      <p class="section-title">Atuação</p>
-      <p>
-        Perfis e soluções em alumínio<br>
-        Aplicações industriais e técnicas<br>
-        Projetos sob demanda
-      </p>
-
-      <p class="section-title">Status</p>
-      <p>
-        Empresa ativa, em fase de estruturação e expansão operacional.
-      </p>
-
-      <p class="section-title">Contato</p>
-      <div class="contact">
-        📞 (16) 99785-7531<br>
-        ✉️ vendas@allluminumbr.com<br>
-        📍 São Carlos – SP – Brasil
-      </div>
-
-      <p class="section-title">Redes sociais</p>
-      <div class="socials">
-        <span>Instagram — @allluminumbr</span>
-        <span>Facebook — @allluminumbr</span>
-        <span>LinkedIn — All Luminum Br</span>
-        <span>YouTube — All Luminum Br</span>
-      </div>
-    </main>
-
-    <footer>
-      © 2026 All Luminum Br — Todos os direitos reservados.
-    </footer>
-
-  </div>
-</body>
-</html>
+<section class="hero">
+  <div class="hero
