--- a/empresa.html
+++ b/empresa.html
@@ -1,311 +1,89 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Empresa | All Luminum</title>
+  <title>Empresa | All Luminum Br</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-
-  <!-- Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
   <style>
-    /* HEADER FIXO */
-.header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background: rgba(10, 10, 10, 0.95);
-  backdrop-filter: blur(6px);
-  z-index: 1000;
-  border-bottom: 1px solid #1f1f1f;
-}
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      margin: 0;
+      color: #fff;
+      background: #0f0f0f;
+      padding-top: 80px;
+    }
 
-.container-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 18px 10%;
-}
-
-/* LOGO */
-.logo a {
-  font-size: 20px;
-  font-weight: 700;
-  color: #ffffff;
-  text-decoration: none;
-  letter-spacing: 1px;
-}
-
-/* MENU */
-.nav ul {
-  display: flex;
-  list-style: none;
-  gap: 35px;
-}
-
-.nav a {
-  text-decoration: none;
-  color: #e0e0e0;
-  font-size: 14px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  transition: 0.3s;
-}
-
-.nav a:hover {
-  color: #ffffff;
-}
-
-/* BOTÃO CONTATO */
-.btn-contato {
-  padding: 10px 18px;
-  border: 1px solid #cfcfcf;
-  border-radius: 30px;
-  transition: 0.3s;
-}
-
-.btn-contato:hover {
-  background: #ffffff;
-  color: #000000;
-}
-
-/* SOCIAL */
-.social-header a {
-  margin-left: 12px;
-  color: #ffffff;
-  font-size: 16px;
-  transition: 0.3s;
-}
-
-.social-header a:hover {
-  opacity: 0.7;
-}
-
-/* MOBILE */
-.menu-toggle {
-  display: none;
-  font-size: 22px;
-  color: #fff;
-  cursor: pointer;
-}
-
-/* RESPONSIVO */
-@media (max-width: 900px) {
-  .nav {
-    position: fixed;
-    top: 70px;
-    right: -100%;
-    background: #0d0d0d;
-    width: 100%;
-    height: calc(100vh - 70px);
-    transition: 0.3s;
-    padding-top: 40px;
-  }
-
-  .nav ul {
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-  }
-
-  .menu-toggle {
-    display: block;
-  }
-
-  .nav.active {
-    right: 0;
-  }
-
-  .social-header {
-    display: none;
-  }
-}
-
-/* ESPAÇO PARA O HEADER FIXO */
-body {
-  padding-top: 80px;
-}
-
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Inter', sans-serif; }
-    body { background: #0d0d0d; color: #fff; }
-
-    .hero {
-      min-height: 100vh;
-      background: linear-gradient(rgba(0,0,0,.75), rgba(0,0,0,.75)),
-                  url('https://images.unsplash.com/photo-1581090700227-1e37b190418e') center/cover no-repeat;
+    header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      height: 80px;
+      background: rgba(0,0,0,0.9);
       display: flex;
       align-items: center;
-      padding: 80px 10%;
+      justify-content: space-between;
+      padding: 0 40px;
     }
 
-    .hero-content {
-      max-width: 720px;
-    }
+    header img { height: 40px; }
 
-    .hero-content h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
-      font-weight: 700;
-    }
-
-    .hero-content p {
-      font-size: 18px;
-      line-height: 1.7;
-      color: #dcdcdc;
-    }
-
-    section {
-      padding: 80px 10%;
-      background: #111;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 40px;
-    }
-
-    h2 {
-      font-size: 32px;
-      margin-bottom: 20px;
-    }
-
-    .card {
-      background: #1a1a1a;
-      padding: 30px;
-      border-left: 4px solid #bfbfbf;
-    }
-
-    footer {
-      background: #0a0a0a;
-      padding: 40px 10%;
-      text-align: center;
-      font-size: 14px;
-      color: #aaa;
-    }
-
-    .socials i {
-      margin: 0 10px;
-      font-size: 20px;
+    nav a {
       color: #fff;
+      margin-left: 24px;
+      text-decoration: none;
+    }
+
+    main {
+      max-width: 900px;
+      margin: auto;
+      padding: 60px 20px;
+    }
+
+    h1 {
+      font-size: 36px;
+      margin-bottom: 24px;
+    }
+
+    p {
+      font-size: 17px;
+      line-height: 1.7;
+      margin-bottom: 16px;
+      opacity: 0.9;
     }
   </style>
 </head>
 
-  <script>
-  const toggle = document.querySelector('.menu-toggle');
-  const nav = document.querySelector('.nav');
-
-  toggle.addEventListener('click', () => {
-    nav.classList.toggle('active');
-  });
-</script>
-
 <body>
 
-  <header class="header">
-  <div class="container-header">
-
-    <!-- LOGO -->
-    <div class="logo">
-      <a href="index.html">ALL LUMINUM</a>
-    </div>
-
-    <!-- MENU -->
-    <nav class="nav">
-      <ul>
-        <li><a href="empresa.html">Empresa</a></li>
-        <li><a href="atuacao.html">Atuação</a></li>
-        <li><a href="servicos.html">Soluções</a></li>
-        <li><a href="contato.html" class="btn-contato">Contato</a></li>
-      </ul>
-    </nav>
-
-    <!-- SOCIAL -->
-    <div class="social-header">
-      <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-      <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-      <a href="#" aria-label="Linkedin"><i class="fab fa-linkedin"></i></a>
-      <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-    </div>
-
-    <!-- MOBILE MENU -->
-    <div class="menu-toggle">
-      <i class="fas fa-bars"></i>
-    </div>
-
-  </div>
+<header>
+  <img src="https://via.placeholder.com/180x40?text=ALL+LUMINUM+BR">
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="empresa.html">Empresa</a>
+    <a href="atuacao.html">Atuação</a>
+    <a href="index.html#contato">Contato</a>
+  </nav>
 </header>
 
-  <!-- HERO -->
-  <div class="hero">
-    <div class="hero-content">
-      <h1>All Luminum</h1>
-      <p>
-        Somos uma empresa industrial especializada em soluções em alumínio,
-        atuando com foco em qualidade, precisão técnica e excelência produtiva.
-        Desenvolvemos processos e produtos que atendem às mais altas exigências
-        do mercado nacional e internacional.
-      </p>
-    </div>
-  </div>
+<main>
+  <h1>Quem Somos</h1>
 
-  <!-- QUEM SOMOS -->
-  <section>
-    <h2>Quem Somos</h2>
-    <p>
-      A All Luminum nasce com o propósito de elevar o padrão industrial do alumínio,
-      unindo tecnologia, engenharia de processos e compromisso com resultados.
-      Atuamos de forma estratégica, atendendo indústrias, construtoras e projetos
-      especiais que exigem desempenho, durabilidade e acabamento superior.
-    </p>
-  </section>
+  <p>
+    A All Luminum Br nasceu com o propósito de entregar soluções em alumínio
+    alinhadas aos mais altos padrões industriais.
+  </p>
 
-  <!-- MISSÃO VISÃO VALORES -->
-  <section>
-    <div class="grid">
-      <div class="card">
-        <h3>Missão</h3>
-        <p>
-          Fornecer soluções em alumínio com alto padrão de qualidade,
-          eficiência produtiva e confiabilidade técnica.
-        </p>
-      </div>
+  <p>
+    Atuamos com foco em qualidade, processo, confiabilidade e relacionamento de longo prazo,
+    atendendo empresas que exigem precisão, acabamento e responsabilidade técnica.
+  </p>
 
-      <div class="card">
-        <h3>Visão</h3>
-        <p>
-          Ser referência nacional no setor de alumínio industrial,
-          reconhecida pela excelência, inovação e relacionamento com o mercado.
-        </p>
-      </div>
-
-      <div class="card">
-        <h3>Valores</h3>
-        <p>
-          Qualidade • Compromisso • Ética • Inovação • Responsabilidade Industrial
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <!-- RODAPÉ -->
-  <footer>
-    <p>📍 São Carlos, SP, Brasil</p>
-    <p>📧 vendas@allluminumbr.com | ☎️ (16) 99785-7531</p>
-
-    <div class="socials">
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-facebook"></i></a>
-      <a href="#"><i class="fab fa-linkedin"></i></a>
-      <a href="#"><i class="fab fa-youtube"></i></a>
-    </div>
-
-    <p style="margin-top:20px;">© All Luminum — Todos os direitos reservados</p>
-  </footer>
+  <p>
+    Nossa operação está sediada em São Carlos – SP, com atuação estratégica
+    em projetos industriais, estruturais e personalizados.
+  </p>
+</main>
 
 </body>
 </html>
