--- a/atuacao.html
+++ b/atuacao.html
@@ -1,266 +1,86 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Atuação | Soluções - All Luminum</title>
+  <title>Atuação | All Luminum Br</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
   <style>
-    /* HEADER FIXO */
-.header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background: rgba(10, 10, 10, 0.95);
-  backdrop-filter: blur(6px);
-  z-index: 1000;
-  border-bottom: 1px solid #1f1f1f;
-}
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      margin: 0;
+      background: #111;
+      color: #fff;
+      padding-top: 80px;
+    }
 
-.container-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 18px 10%;
-}
-
-/* LOGO */
-.logo a {
-  font-size: 20px;
-  font-weight: 700;
-  color: #ffffff;
-  text-decoration: none;
-  letter-spacing: 1px;
-}
-
-/* MENU */
-.nav ul {
-  display: flex;
-  list-style: none;
-  gap: 35px;
-}
-
-.nav a {
-  text-decoration: none;
-  color: #e0e0e0;
-  font-size: 14px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  transition: 0.3s;
-}
-
-.nav a:hover {
-  color: #ffffff;
-}
-
-/* BOTÃO CONTATO */
-.btn-contato {
-  padding: 10px 18px;
-  border: 1px solid #cfcfcf;
-  border-radius: 30px;
-  transition: 0.3s;
-}
-
-.btn-contato:hover {
-  background: #ffffff;
-  color: #000000;
-}
-
-/* SOCIAL */
-.social-header a {
-  margin-left: 12px;
-  color: #ffffff;
-  font-size: 16px;
-  transition: 0.3s;
-}
-
-.social-header a:hover {
-  opacity: 0.7;
-}
-
-/* MOBILE */
-.menu-toggle {
-  display: none;
-  font-size: 22px;
-  color: #fff;
-  cursor: pointer;
-}
-
-/* RESPONSIVO */
-@media (max-width: 900px) {
-  .nav {
-    position: fixed;
-    top: 70px;
-    right: -100%;
-    background: #0d0d0d;
-    width: 100%;
-    height: calc(100vh - 70px);
-    transition: 0.3s;
-    padding-top: 40px;
-  }
-
-  .nav ul {
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-  }
-
-  .menu-toggle {
-    display: block;
-  }
-
-  .nav.active {
-    right: 0;
-  }
-
-  .social-header {
-    display: none;
-  }
-}
-
-/* ESPAÇO PARA O HEADER FIXO */
-body {
-  padding-top: 80px;
-}
-
-    * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Inter', sans-serif; }
-    body { background: #0e0e0e; color: #fff; }
-
-    .hero {
-      min-height: 60vh;
-      background: linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.8)),
-                  url('https://images.unsplash.com/photo-1618005198919-d3d4b5a92ead') center/cover no-repeat;
+    header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      height: 80px;
+      background: rgba(0,0,0,0.9);
       display: flex;
       align-items: center;
-      padding: 80px 10%;
+      justify-content: space-between;
+      padding: 0 40px;
     }
 
-    h1 { font-size: 42px; }
+    header img { height: 40px; }
 
-    section {
-      padding: 80px 10%;
+    nav a {
+      color: #fff;
+      margin-left: 24px;
+      text-decoration: none;
     }
 
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 40px;
+    main {
+      max-width: 1000px;
+      margin: auto;
+      padding: 60px 20px;
     }
 
-    .box {
-      background: #1a1a1a;
-      padding: 30px;
-      border-left: 4px solid #cfcfcf;
+    h1 {
+      font-size: 36px;
+      margin-bottom: 30px;
     }
 
-    footer {
-      background: #0a0a0a;
-      padding: 40px 10%;
-      text-align: center;
-      font-size: 14px;
-      color: #aaa;
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    li {
+      margin-bottom: 18px;
+      font-size: 18px;
+      opacity: 0.9;
     }
   </style>
 </head>
 
 <body>
 
-  <!-- HERO -->
-  <div class="hero">
-    <h1>Atuação & Soluções</h1>
-  </div>
-
-  <!-- SOLUÇÕES -->
-  <section>
-    <div class="grid">
-
-      <div class="box">
-        <h3>Perfis de Alumínio</h3>
-        <p>
-          Desenvolvimento e fornecimento de perfis industriais
-          conforme especificações técnicas e necessidades do projeto.
-        </p>
-      </div>
-
-      <div class="box">
-        <h3>Pintura Eletrostática</h3>
-        <p>
-          Acabamento de alta durabilidade, resistência e padrão estético,
-          atendendo normas industriais e arquitetônicas.
-        </p>
-      </div>
-
-      <div class="box">
-        <h3>Soluções Industriais</h3>
-        <p>
-          Atendimento a demandas personalizadas para indústrias,
-          construção civil e projetos especiais.
-        </p>
-      </div>
-
-      <div class="box">
-        <h3>Qualidade & Processo</h3>
-        <p>
-          Controle rigoroso de produção, inspeção técnica
-          e compromisso com desempenho e segurança.
-        </p>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- RODAPÉ -->
-  <footer>
-    <p>📍 São Carlos, SP, Brasil</p>
-    <p>📧 vendas@allluminumbr.com | ☎️ (16) 99785-7531</p>
-    <p>Instagram, Facebook, LinkedIn e YouTube: @allluminumbr</p>
-  </footer>
-
-  <script>
-  const toggle = document.querySelector('.menu-toggle');
-  const nav = document.querySelector('.nav');
-
-  toggle.addEventListener('click', () => {
-    nav.classList.toggle('active');
-  });
-</script>
-  
-</body>
-  <header class="header">
-  <div class="container-header">
-
-    <!-- LOGO -->
-    <div class="logo">
-      <a href="index.html">ALL LUMINUM</a>
-    </div>
-
-    <!-- MENU -->
-    <nav class="nav">
-      <ul>
-        <li><a href="empresa.html">Empresa</a></li>
-        <li><a href="atuacao.html">Atuação</a></li>
-        <li><a href="servicos.html">Soluções</a></li>
-        <li><a href="contato.html" class="btn-contato">Contato</a></li>
-      </ul>
-    </nav>
-
-    <!-- SOCIAL -->
-    <div class="social-header">
-      <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-      <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-      <a href="#" aria-label="Linkedin"><i class="fab fa-linkedin"></i></a>
-      <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
-    </div>
-
-    <!-- MOBILE MENU -->
-    <div class="menu-toggle">
-      <i class="fas fa-bars"></i>
-    </div>
-
-  </div>
+<header>
+  <img src="https://via.placeholder.com/180x40?text=ALL+LUMINUM+BR">
+  <nav>
+    <a href="index.html">Início</a>
+    <a href="empresa.html">Empresa</a>
+    <a href="atuacao.html">Atuação</a>
+    <a href="index.html#contato">Contato</a>
+  </nav>
 </header>
 
+<main>
+  <h1>Atuação e Soluções</h1>
+
+  <ul>
+    <li>✔ Perfis e soluções em alumínio industrial</li>
+    <li>✔ Projetos personalizados conforme necessidade técnica</li>
+    <li>✔ Acabamentos industriais e pintura eletrostática</li>
+    <li>✔ Fornecimento para aplicações estruturais e produtivas</li>
+    <li>✔ Atendimento técnico e comercial especializado</li>
+  </ul>
+</main>
+
+</body>
 </html>
