--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
       background: #000;
     }
 
-    /* HEADER */
     header {
       position: fixed;
       top: 0;
       width: 100%;
       height: 80px;
       background: rgba(0,0,0,0.85);
-      backdrop-filter: blur(6px);
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -29,72 +27,50 @@
       z-index: 1000;
     }
 
-    header img {
-      height: 40px;
-    }
+    header img { height: 40px; }
 
     nav a {
       color: #fff;
       margin-left: 24px;
       text-decoration: none;
-      font-weight: 500;
       font-size: 15px;
     }
 
-    nav a:hover {
-      opacity: 0.7;
-    }
-
-    /* HERO */
     .hero {
       height: 100vh;
-      background: url("https://images.unsplash.com/photo-1581090700227-1e37b190418e") center/cover no-repeat;
+      background: #111;
       display: flex;
       align-items: center;
       justify-content: center;
+      padding-top: 80px;
       text-align: center;
-      padding: 120px 20px 40px;
     }
 
-    .hero-content {
-      background: rgba(0,0,0,0.65);
-      padding: 50px;
-      max-width: 720px;
-    }
-
-    h1 {
+    .hero h1 {
       font-size: 42px;
-      margin-bottom: 20px;
+      margin-bottom: 16px;
     }
 
-    p {
+    .hero p {
       font-size: 18px;
-      line-height: 1.6;
       opacity: 0.9;
     }
 
-    /* FOOTER */
-    footer {
+    #contato {
+      padding: 80px 20px;
       background: #0f0f0f;
-      padding: 40px 20px;
       text-align: center;
-      font-size: 14px;
     }
 
-    footer a {
-      color: #fff;
-      margin: 0 10px;
-      text-decoration: none;
+    #contato h2 {
+      font-size: 32px;
+      margin-bottom: 20px;
     }
 
-    @media (max-width: 768px) {
-      nav {
-        display: none;
-      }
-
-      h1 {
-        font-size: 30px;
-      }
+    #contato p {
+      font-size: 16px;
+      margin-bottom: 8px;
+      opacity: 0.9;
     }
   </style>
 </head>
@@ -112,4 +88,18 @@
 </header>
 
 <section class="hero">
-  <div class="hero
+  <div>
+    <h1>Alumínio Industrial com Padrão Técnico</h1>
+    <p>Processo, confiabilidade e soluções sob medida.</p>
+  </div>
+</section>
+
+<section id="contato">
+  <h2>Contato</h2>
+  <p>📧 vendas@allluminumbr.com</p>
+  <p>📞 (16) 99785-7531</p>
+  <p>📍 São Carlos – SP – Brasil</p>
+</section>
+
+</body>
+</html>
