--- a/atuacao.html
+++ b/atuacao.html
@@ -24,6 +24,7 @@
       align-items: center;
       justify-content: space-between;
       padding: 0 40px;
+      z-index: 1000;
     }
 
     header img { height: 40px; }
@@ -32,6 +33,7 @@
       color: #fff;
       margin-left: 24px;
       text-decoration: none;
+      font-size: 15px;
     }
 
     main {
@@ -61,7 +63,7 @@
 <body>
 
 <header>
-  <img src="https://via.placeholder.com/180x40?text=ALL+LUMINUM+BR">
+  <img src="https://via.placeholder.com/180x40?text=ALL+LUMINUM+BR" alt="All Luminum Br">
   <nav>
     <a href="index.html">Início</a>
     <a href="empresa.html">Empresa</a>
