--- a/index.html
+++ b/index.html
@@ -14,92 +14,45 @@
       background: #000;
     }
 
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      height: 80px;
-      background: rgba(0,0,0,0.85);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 40px;
-      z-index: 1000;
-    }
-
-    header img { height: 40px; }
-
-    nav a {
-      color: #fff;
-      margin-left: 24px;
-      text-decoration: none;
-      font-size: 15px;
-    }
-
     .hero {
       height: 100vh;
-      background: #111;
+      background: url("https://images.unsplash.com/photo-1581090700227-1e37b190418e") center/cover no-repeat;
       display: flex;
       align-items: center;
       justify-content: center;
-      padding-top: 80px;
       text-align: center;
+      padding: 120px 20px 40px;
     }
 
-    .hero h1 {
+    .hero-content {
+      background: rgba(0,0,0,0.65);
+      padding: 50px;
+      max-width: 720px;
+    }
+
+    h1 {
       font-size: 42px;
-      margin-bottom: 16px;
-    }
-
-    .hero p {
-      font-size: 18px;
-      opacity: 0.9;
-    }
-
-    #contato {
-      padding: 80px 20px;
-      background: #0f0f0f;
-      text-align: center;
-    }
-
-    #contato h2 {
-      font-size: 32px;
       margin-bottom: 20px;
     }
 
-    #contato p {
-      font-size: 16px;
-      margin-bottom: 8px;
+    p {
+      font-size: 18px;
+      line-height: 1.6;
       opacity: 0.9;
     }
-  </style>
-</head>
 
-<body>
+    footer {
+      background: #0f0f0f;
+      padding: 40px 20px;
+      text-align: center;
+      font-size: 14px;
+    }
 
-<header>
-  <img src="https://via.placeholder.com/180x40?text=ALL+LUMINUM+BR" alt="All Luminum Br">
-  <nav>
-    <a href="index.html">Início</a>
-    <a href="empresa.html">Empresa</a>
-    <a href="atuacao.html">Atuação</a>
-    <a href="#contato">Contato</a>
-  </nav>
-</header>
+    footer a {
+      color: #fff;
+      margin: 0 10px;
+      text-decoration: none;
+    }
 
-<section class="hero">
-  <div>
-    <h1>Alumínio Industrial com Padrão Técnico</h1>
-    <p>Processo, confiabilidade e soluções sob medida.</p>
-  </div>
-</section>
-
-<section id="contato">
-  <h2>Contato</h2>
-  <p>📧 vendas@allluminumbr.com</p>
-  <p>📞 (16) 99785-7531</p>
-  <p>📍 São Carlos – SP – Brasil</p>
-</section>
-
-</body>
-</html>
+    @media (max-width: 768px) {
+      h1 { font-size: 30px; }
