--- a/empresa.html
+++ b/empresa.html
@@ -11,29 +11,7 @@
       margin: 0;
       color: #fff;
       background: #0f0f0f;
-      padding-top: 80px;
-    }
-
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      height: 80px;
-      background: rgba(0,0,0,0.9);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 40px;
-      z-index: 1000;
-    }
-
-    header img { height: 40px; }
-
-    nav a {
-      color: #fff;
-      margin-left: 24px;
-      text-decoration: none;
-      font-size: 15px;
+      padding-top: 100px;
     }
 
     main {
@@ -58,15 +36,7 @@
 
 <body>
 
-<header>
-  <img src="https://via.placeholder.com/180x40?text=ALL+LUMINUM+BR" alt="All Luminum Br">
-  <nav>
-    <a href="index.html">Início</a>
-    <a href="empresa.html">Empresa</a>
-    <a href="atuacao.html">Atuação</a>
-    <a href="index.html#contato">Contato</a>
-  </nav>
-</header>
+<div id="header"></div>
 
 <main>
   <h1>Quem Somos</h1>
@@ -77,8 +47,8 @@
   </p>
 
   <p>
-    Atuamos com foco em qualidade, processo, confiabilidade e relacionamento de longo prazo,
-    atendendo empresas que exigem precisão, acabamento e responsabilidade técnica.
+    Atuamos com foco em qualidade, processo, confiabilidade e relacionamento
+    de longo prazo, atendendo empresas que exigem precisão e responsabilidade técnica.
   </p>
 
   <p>
@@ -87,5 +57,6 @@
   </p>
 </main>
 
+<script src="script.js"></script>
 </body>
 </html>
