--- a/atuacao.html
+++ b/atuacao.html
@@ -11,29 +11,7 @@
       margin: 0;
       background: #111;
       color: #fff;
-      padding-top: 80px;
-    }
-
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      height: 80px;
-      background: rgba(0,0,0,0.9);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 40px;
-      z-index: 1000;
-    }
-
-    header img { height: 40px; }
-
-    nav a {
-      color: #fff;
-      margin-left: 24px;
-      text-decoration: none;
-      font-size: 15px;
+      padding-top: 100px;
     }
 
     main {
@@ -62,15 +40,7 @@
 
 <body>
 
-<header>
-  <img src="https://via.placeholder.com/180x40?text=ALL+LUMINUM+BR" alt="All Luminum Br">
-  <nav>
-    <a href="index.html">Início</a>
-    <a href="empresa.html">Empresa</a>
-    <a href="atuacao.html">Atuação</a>
-    <a href="index.html#contato">Contato</a>
-  </nav>
-</header>
+<div id="header"></div>
 
 <main>
   <h1>Atuação e Soluções</h1>
@@ -84,5 +54,6 @@
   </ul>
 </main>
 
+<script src="script.js"></script>
 </body>
 </html>
