--- a/index.html
+++ b/index.html
@@ -1,58 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>All Luminum Br | Alumínio Industrial</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>All Luminum</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+  <div id="header"></div>
 
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-      color: #fff;
-      background: #000;
-    }
+  <main>
+    <h1>All Luminum</h1>
+    <p>Conteúdo da página inicial.</p>
+  </main>
 
-    .hero {
-      height: 100vh;
-      background: url("https://images.unsplash.com/photo-1581090700227-1e37b190418e") center/cover no-repeat;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      padding: 120px 20px 40px;
-    }
-
-    .hero-content {
-      background: rgba(0,0,0,0.65);
-      padding: 50px;
-      max-width: 720px;
-    }
-
-    h1 {
-      font-size: 42px;
-      margin-bottom: 20px;
-    }
-
-    p {
-      font-size: 18px;
-      line-height: 1.6;
-      opacity: 0.9;
-    }
-
-    footer {
-      background: #0f0f0f;
-      padding: 40px 20px;
-      text-align: center;
-      font-size: 14px;
-    }
-
-    footer a {
-      color: #fff;
-      margin: 0 10px;
-      text-decoration: none;
-    }
-
-    @media (max-width: 768px) {
-      h1 { font-size: 30px; }
+  <script src="script.js"></script>
+</body>
+</html>
