--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>All Luminum</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+  <!-- Header carregado via JS -->
   <div id="header"></div>
 
   <main>
     <h1>All Luminum</h1>
-    <p>Conteúdo da página inicial.</p>
+    <p>Página inicial do site.</p>
   </main>
 
   <script src="script.js"></script>
