--- a/atuacao.html
+++ b/atuacao.html
@@ -1,19 +1,45 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Atuação | All Luminum</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Atuação | All Luminum Br</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      margin:0;
+      font-family:Arial, Helvetica, sans-serif;
+      background:#111;
+      color:#fff;
+      padding-top:120px;
+    }
+
+    main {
+      max-width:900px;
+      margin:auto;
+      padding:40px 20px;
+    }
+
+    li {
+      margin-bottom:14px;
+    }
+  </style>
 </head>
+
 <body>
 
-  <div id="header"></div>
+<div id="header"></div>
 
-  <main>
-    <h1>Atuação</h1>
-    <p>Áreas de atuação da All Luminum.</p>
-  </main>
+<main>
+  <h1>Atuação e Soluções</h1>
+  <ul>
+    <li>✔ Perfis em alumínio industrial</li>
+    <li>✔ Projetos personalizados</li>
+    <li>✔ Acabamentos industriais</li>
+    <li>✔ Atendimento técnico especializado</li>
+  </ul>
+</main>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
