--- a/index.html
+++ b/index.html
@@ -1,58 +1,53 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>All Luminum Br | Alumínio Industrial</title>
+  <title>All Luminum | Soluções em Alumínio</title>
+  <meta name="description" content="Perfis e soluções industriais em alumínio com qualidade, precisão e confiabilidade.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <style>
-    body {
-      margin:0;
-      font-family:Arial, Helvetica, sans-serif;
-      background:#000;
-      color:#fff;
-    }
-
-    .hero {
-      min-height:100vh;
-      background:url("https://images.unsplash.com/photo-1581090700227-1e37b190418e") center/cover no-repeat;
-      padding:140px 20px 60px;
-      text-align:center;
-    }
-
-    .hero-box {
-      background:rgba(0,0,0,0.65);
-      max-width:700px;
-      margin:auto;
-      padding:50px;
-    }
-
-    footer {
-      background:#0f0f0f;
-      padding:40px 20px;
-      text-align:center;
-      font-size:14px;
-    }
-  </style>
 </head>
 
 <body>
 
-<div id="header"></div>
+  <header>
+    <nav>
+      <a href="/">Início</a> |
+      <a href="/empresa.html">Empresa</a> |
+      <a href="/atuacao.html">Atuação</a> |
+      <a href="/processos.html">Processos</a> |
+      <a href="#contato">Contato</a>
+    </nav>
+  </header>
 
-<section class="hero">
-  <div class="hero-box">
-    <h1>Alumínio Industrial com Responsabilidade Técnica</h1>
-    <p>Perfis, soluções e projetos em alumínio para aplicações industriais e estruturais.</p>
-  </div>
-</section>
+  <main>
+    <h1>All Luminum</h1>
+    <p>
+      Atuamos com soluções em alumínio voltadas para aplicações industriais,
+      priorizando qualidade, padronização e eficiência produtiva.
+    </p>
 
-<footer id="contato">
-  <p>📧 vendas@allluminumbr.com</p>
-  <p>📞 (16) 99785-7531</p>
-  <p>📍 São Carlos – SP – Brasil</p>
-</footer>
+    <section>
+      <h2>Processos Industriais</h2>
+      <p>
+        Conheça os processos e padrões de qualidade que garantem precisão,
+        confiabilidade e consistência na produção dos perfis de alumínio.
+      </p>
+      <p>
+        <a href="/processos.html">Ver processos e padrões de qualidade</a>
+      </p>
+    </section>
 
-<script src="script.js"></script>
+    <section id="contato">
+      <h2>Contato</h2>
+      <p>
+        Entre em contato para saber mais sobre nossas soluções industriais.
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2026 All Luminum. Todos os direitos reservados.</p>
+  </footer>
+
 </body>
 </html>
