--- a/empresa.html
+++ b/empresa.html
@@ -1,38 +1,52 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Empresa | All Luminum Br</title>
+  <title>Empresa | All Luminum</title>
+  <meta name="description" content="Conheça a All Luminum, nossa estrutura, princípios industriais e compromisso com qualidade.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <style>
-    body {
-      margin:0;
-      font-family:Arial, Helvetica, sans-serif;
-      background:#111;
-      color:#fff;
-      padding-top:120px;
-    }
-
-    main {
-      max-width:900px;
-      margin:auto;
-      padding:40px 20px;
-    }
-  </style>
 </head>
 
 <body>
 
-<div id="header"></div>
+  <header>
+    <nav>
+      <a href="/">Início</a> |
+      <a href="/empresa.html">Empresa</a> |
+      <a href="/atuacao.html">Atuação</a> |
+      <a href="/processos.html">Processos</a> |
+      <a href="/#contato">Contato</a>
+    </nav>
+  </header>
 
-<main>
-  <h1>Quem Somos</h1>
-  <p>A All Luminum Br atua com soluções em alumínio voltadas ao mercado industrial.</p>
-  <p>Foco em qualidade, processo, confiabilidade e relacionamento de longo prazo.</p>
-  <p>Sede em São Carlos – SP.</p>
-</main>
+  <main>
+    <h1>Quem Somos</h1>
 
-<script src="script.js"></script>
+    <p>
+      A All Luminum atua no desenvolvimento de soluções industriais em alumínio,
+      com foco em padronização, desempenho técnico e confiabilidade.
+    </p>
+
+    <p>
+      Nossa estrutura é pensada para atender demandas industriais com
+      controle de processo, rastreabilidade e qualidade constante.
+    </p>
+
+    <section>
+      <h2>Como Trabalhamos</h2>
+      <p>
+        Nossa operação é baseada em processos definidos, controle técnico
+        e padronização produtiva.
+      </p>
+      <p>
+        <a href="/processos.html">Conheça nossos processos industriais</a>
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2026 All Luminum. Todos os direitos reservados.</p>
+  </footer>
+
 </body>
 </html>
