--- a/atuacao.html
+++ b/atuacao.html
@@ -1,45 +1,53 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Atuação | All Luminum Br</title>
+  <title>Atuação | All Luminum</title>
+  <meta name="description" content="Áreas de atuação da All Luminum em aplicações industriais com perfis de alumínio.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <style>
-    body {
-      margin:0;
-      font-family:Arial, Helvetica, sans-serif;
-      background:#111;
-      color:#fff;
-      padding-top:120px;
-    }
-
-    main {
-      max-width:900px;
-      margin:auto;
-      padding:40px 20px;
-    }
-
-    li {
-      margin-bottom:14px;
-    }
-  </style>
 </head>
 
 <body>
 
-<div id="header"></div>
+  <header>
+    <nav>
+      <a href="/">Início</a> |
+      <a href="/empresa.html">Empresa</a> |
+      <a href="/atuacao.html">Atuação</a> |
+      <a href="/processos.html">Processos</a> |
+      <a href="/#contato">Contato</a>
+    </nav>
+  </header>
 
-<main>
-  <h1>Atuação e Soluções</h1>
-  <ul>
-    <li>✔ Perfis em alumínio industrial</li>
-    <li>✔ Projetos personalizados</li>
-    <li>✔ Acabamentos industriais</li>
-    <li>✔ Atendimento técnico especializado</li>
-  </ul>
-</main>
+  <main>
+    <h1>Áreas de Atuação</h1>
 
-<script src="script.js"></script>
+    <p>
+      Atendemos diferentes segmentos industriais que exigem precisão,
+      repetibilidade e desempenho técnico em alumínio.
+    </p>
+
+    <ul>
+      <li>Indústria</li>
+      <li>Estruturas técnicas</li>
+      <li>Aplicações sob medida</li>
+    </ul>
+
+    <section>
+      <h2>Qualidade aplicada à indústria</h2>
+      <p>
+        Cada área de atuação exige processos produtivos bem definidos,
+        controle dimensional e padrão de acabamento.
+      </p>
+      <p>
+        <a href="/processos.html">Veja como garantimos qualidade nos processos</a>
+      </p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2026 All Luminum. Todos os direitos reservados.</p>
+  </footer>
+
 </body>
 </html>
