--- a/index.html
+++ b/index.html
@@ -2,52 +2,25 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>All Luminum | Soluções em Alumínio</title>
-  <meta name="description" content="Perfis e soluções industriais em alumínio com qualidade, precisão e confiabilidade.">
+  <title>All Luminum | Soluções em Alumínio Industrial</title>
+
+  <meta name="description" content="A All Luminum atua com soluções em alumínio industrial, processos produtivos eficientes e qualidade técnica aplicada à indústria.">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
 
-  <header>
-    <nav>
-      <a href="/">Início</a> |
-      <a href="/empresa.html">Empresa</a> |
-      <a href="/atuacao.html">Atuação</a> |
-      <a href="/processos.html">Processos</a> |
-      <a href="#contato">Contato</a>
-    </nav>
-  </header>
+<header id="header"></header>
 
-  <main>
-    <h1>All Luminum</h1>
-    <p>
-      Atuamos com soluções em alumínio voltadas para aplicações industriais,
-      priorizando qualidade, padronização e eficiência produtiva.
-    </p>
+<main>
+  <h1>Todo em Alumínio</h1>
 
-    <section>
-      <h2>Processos Industriais</h2>
-      <p>
-        Conheça os processos e padrões de qualidade que garantem precisão,
-        confiabilidade e consistência na produção dos perfis de alumínio.
-      </p>
-      <p>
-        <a href="/processos.html">Ver processos e padrões de qualidade</a>
-      </p>
-    </section>
+  <p>
+    A All Luminum desenvolve soluções em alumínio com foco em processos industriais,
+    padronização técnica e desempenho produtivo.
+  </p>
+</main>
 
-    <section id="contato">
-      <h2>Contato</h2>
-      <p>
-        Entre em contato para saber mais sobre nossas soluções industriais.
-      </p>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2026 All Luminum. Todos os direitos reservados.</p>
-  </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
