--- a/empresa.html
+++ b/empresa.html
@@ -3,50 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Empresa | All Luminum</title>
-  <meta name="description" content="Conheça a All Luminum, nossa estrutura, princípios industriais e compromisso com qualidade.">
+
+  <meta name="description" content="Conheça a história, estrutura e posicionamento da All Luminum no setor de alumínio industrial.">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
 
-  <header>
-    <nav>
-      <a href="/">Início</a> |
-      <a href="/empresa.html">Empresa</a> |
-      <a href="/atuacao.html">Atuação</a> |
-      <a href="/processos.html">Processos</a> |
-      <a href="/#contato">Contato</a>
-    </nav>
-  </header>
+<header id="header"></header>
 
-  <main>
-    <h1>Quem Somos</h1>
+<main>
+  <h1>Empresa</h1>
 
-    <p>
-      A All Luminum atua no desenvolvimento de soluções industriais em alumínio,
-      com foco em padronização, desempenho técnico e confiabilidade.
-    </p>
+  <p>
+    A All Luminum é uma empresa focada em soluções industriais em alumínio,
+    com atenção aos processos, qualidade e eficiência produtiva.
+  </p>
+</main>
 
-    <p>
-      Nossa estrutura é pensada para atender demandas industriais com
-      controle de processo, rastreabilidade e qualidade constante.
-    </p>
-
-    <section>
-      <h2>Como Trabalhamos</h2>
-      <p>
-        Nossa operação é baseada em processos definidos, controle técnico
-        e padronização produtiva.
-      </p>
-      <p>
-        <a href="/processos.html">Conheça nossos processos industriais</a>
-      </p>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2026 All Luminum. Todos os direitos reservados.</p>
-  </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
