--- a/atuacao.html
+++ b/atuacao.html
@@ -3,51 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Atuação | All Luminum</title>
-  <meta name="description" content="Áreas de atuação da All Luminum em aplicações industriais com perfis de alumínio.">
+
+  <meta name="description" content="Veja as áreas de atuação da All Luminum e como nossas soluções em alumínio atendem diferentes segmentos industriais.">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
 
-  <header>
-    <nav>
-      <a href="/">Início</a> |
-      <a href="/empresa.html">Empresa</a> |
-      <a href="/atuacao.html">Atuação</a> |
-      <a href="/processos.html">Processos</a> |
-      <a href="/#contato">Contato</a>
-    </nav>
-  </header>
+<header id="header"></header>
 
-  <main>
-    <h1>Áreas de Atuação</h1>
+<main>
+  <h1>Atuação</h1>
 
-    <p>
-      Atendemos diferentes segmentos industriais que exigem precisão,
-      repetibilidade e desempenho técnico em alumínio.
-    </p>
+  <p>
+    Atuamos com soluções em alumínio para diferentes demandas industriais,
+    respeitando critérios técnicos, funcionais e produtivos.
+  </p>
+</main>
 
-    <ul>
-      <li>Indústria</li>
-      <li>Estruturas técnicas</li>
-      <li>Aplicações sob medida</li>
-    </ul>
-
-    <section>
-      <h2>Qualidade aplicada à indústria</h2>
-      <p>
-        Cada área de atuação exige processos produtivos bem definidos,
-        controle dimensional e padrão de acabamento.
-      </p>
-      <p>
-        <a href="/processos.html">Veja como garantimos qualidade nos processos</a>
-      </p>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2026 All Luminum. Todos os direitos reservados.</p>
-  </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
