--- a/processos.html
+++ b/processos.html
@@ -3,59 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Processos Industriais | All Luminum</title>
-  <meta name="description" content="Conheça os processos industriais da All Luminum, com foco em qualidade, padronização e controle produtivo.">
+
+  <meta name="description" content="Entenda os processos industriais da All Luminum aplicados à produção em alumínio com foco em qualidade e eficiência.">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
 
-  <header>
-    <nav>
-      <a href="/">Início</a> |
-      <a href="/empresa.html">Empresa</a> |
-      <a href="/atuacao.html">Atuação</a> |
-      <a href="/processos.html">Processos</a> |
-      <a href="/#contato">Contato</a>
-    </nav>
-  </header>
+<header id="header"></header>
 
-  <main>
-    <h1>Processos Industriais</h1>
+<main>
+  <h1>Processos</h1>
 
-    <p>
-      Na All Luminum, os processos industriais são estruturados para garantir
-      consistência, precisão e qualidade em cada etapa produtiva.
-    </p>
+  <p>
+    Nossos processos industriais são estruturados para garantir padronização,
+    desempenho técnico e confiabilidade em soluções de alumínio.
+  </p>
+</main>
 
-    <section>
-      <h2>Padronização e Controle</h2>
-      <p>
-        Trabalhamos com processos definidos, controle técnico e acompanhamento
-        contínuo para assegurar repetibilidade e desempenho dos perfis de alumínio.
-      </p>
-    </section>
-
-    <section>
-      <h2>Qualidade Aplicada</h2>
-      <p>
-        Cada etapa produtiva segue critérios técnicos que visam reduzir variações,
-        garantir acabamento adequado e atender exigências industriais.
-      </p>
-    </section>
-
-    <section>
-      <h2>Compromisso com o Resultado</h2>
-      <p>
-        Nosso foco está na entrega de soluções confiáveis, alinhadas às necessidades
-        do mercado industrial e aos padrões de qualidade estabelecidos.
-      </p>
-    </section>
-
-  </main>
-
-  <footer>
-    <p>© 2026 All Luminum. Todos os direitos reservados.</p>
-  </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
