--- a/empresa.html
+++ b/empresa.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Empresa | All Luminum</title>
 
-  <meta name="description" content="Conheça a história, estrutura e posicionamento da All Luminum no setor de alumínio industrial.">
+  <meta name="description" content="Conheça a All Luminum, sua história, valores e posicionamento no mercado de soluções industriais em alumínio.">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -13,13 +13,50 @@
 <header id="header"></header>
 
 <main>
-  <h1>Empresa</h1>
 
-  <p>
-    A All Luminum é uma empresa focada em soluções industriais em alumínio,
-    com atenção aos processos, qualidade e eficiência produtiva.
-  </p>
+  <section>
+    <h1>Quem Somos</h1>
+
+    <p>
+      A All Luminum é uma empresa brasileira especializada em soluções industriais
+      em alumínio, atuando com foco em qualidade técnica, padronização de processos
+      e eficiência produtiva.
+    </p>
+
+    <p>
+      Nascemos com o propósito de atender demandas industriais que exigem precisão,
+      resistência, confiabilidade e acabamento técnico, utilizando o alumínio
+      como matéria-prima estratégica para diferentes aplicações.
+    </p>
+
+    <p>
+      Nossa atuação é guiada por critérios industriais claros: processo bem definido,
+      controle de qualidade rigoroso e entrega alinhada às necessidades reais do cliente.
+    </p>
+  </section>
+
+  <section>
+    <h2>Posicionamento</h2>
+
+    <p>
+      A All Luminum não atua como um fornecedor genérico. Nosso posicionamento é técnico,
+      industrial e orientado a processo. Cada solução desenvolvida parte da análise do uso,
+      da função e do desempenho esperado.
+    </p>
+
+    <p>
+      Trabalhamos para ser um parceiro industrial confiável, capaz de entregar soluções
+      consistentes, repetíveis e alinhadas aos padrões exigidos pelo mercado.
+    </p>
+  </section>
+
 </main>
+
+<footer>
+  <p><strong>All Luminum</strong></p>
+  <p>São Carlos – SP – Brasil</p>
+  <p>Email: vendas@allluminumbr.com</p>
+</footer>
 
 <script src="script.js"></script>
 </body>
